# wup-demo

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose.yml  events.json
crates/aggregator/: Cargo.toml
crates/aggregator/src/: main.rs  supervisor.rs
crates/common/: Cargo.toml
crates/common/examples/: ws_test.rs
crates/common/src/: error.rs  lib.rs  messages.rs  ws_handler.rs  ws_manager.rs
crates/event_service/: Cargo.toml
crates/event_service/src/: api.rs  error.rs  lib.rs  main.rs  redis_client.rs
crates/executor/: Cargo.toml
crates/executor/src/: api.rs  bbo_cache.rs  error.rs  lib.rs  main.rs  router.rs  traits.rs  types.rs
crates/external_services/: Cargo.toml
crates/external_services/src/: aggregate.rs  error.rs  lib.rs  redis_client.rs
crates/external_services/src/polymarket/: client.rs  mod.rs  types.rs  websocket.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: client.rs  error.rs  lib.rs  main.rs  protocol.rs  router.rs  subscription.rs  ws_server.rs
crates/nats_client/: Cargo.toml
crates/nats_client/src/: client.rs  lib.rs
crates/normalizer/: Cargo.toml
crates/normalizer/src/: lib.rs  schema.rs  service.rs  traits.rs
crates/normalizer/src/polymarket/: adapter.rs  mod.rs
crates/orderbook_service/: Cargo.toml
crates/orderbook_service/src/: api.rs  error.rs  lib.rs  main.rs  orderbook.rs  service.rs  store.rs
crates/polymarket/: Cargo.toml
crates/polymarket/src/: handler.rs  lib.rs
examples/: ws_test.rs
