[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = "0.24"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
metrics = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
