[package]
name = "event_service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event fetching and caching service"

[[bin]]
name = "event_service"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Internal
external_services.workspace = true

# HTTP server
axum.workspace = true
tower-http.workspace = true

# Redis
redis.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Environment
dotenvy.workspace = true
