[package]
name = "external_services"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "External exchange API clients (Polymarket, Kalshi, etc.)"

[dependencies]
# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Redis client
redis.workspace = true
