[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket gateway for real-time orderbook streaming to clients"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# Internal crates
nats_client = { workspace = true }
normalizer = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# NATS
async-nats = { workspace = true }

# HTTP server with WebSocket support
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }

# Lock-free data structures
dashmap = { workspace = true }

# Bytes
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP client for fetching snapshots
reqwest = { workspace = true }

# UUID for client IDs
uuid = { workspace = true }

# Environment
dotenvy = { workspace = true }
