[package]
name = "normalizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
nats_client = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-nats = { workspace = true }
metrics = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
