[package]
name = "polymarket"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
nats_client = { workspace = true }
external_services = { workspace = true }
normalizer = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
async-nats = { workspace = true }
metrics = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
